<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:clipChildren="true"
    android:focusableInTouchMode="false"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="262dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="411dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="326dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="424dp"
        android:layout_height="748dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/fon_zvezdy_ball_compres" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="239dp"
        android:layout_height="144dp"
        android:fontFamily="@font/eraser2"
        android:gravity="center|center_horizontal"
        android:includeFontPadding="false"
        android:lineHeight="35dp"
        android:singleLine="false"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="#FBFBFB"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:autoSizeMaxTextSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/policy"
        android:layout_width="209dp"
        android:layout_height="23dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/policy"
        android:textColor="#FFFCFC"

        android:textColorHint="#ffffff"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toEndOf="@+id/policy"
        app:layout_constraintTop_toTopOf="@+id/policy"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_info_24" />

    <!-- рекламный банер-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="LARGE_BANNER"
        app:adUnitId="@string/admob_baner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.94"></com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>